<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bg_login_image"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/icon8" />

    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/bg_login_image"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="250dp"
                    android:src="@drawable/home_logo"
                    android:contentDescription="@string/logo"
                    android:layout_marginBottom="20dp"/>


                <EditText
                    android:id="@+id/editTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:minHeight="48dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_box"
                    android:gravity="center"
                    tools:ignore="VisualLintTextFieldSize"
                    android:layout_marginBottom="7dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/opensansreg" />


                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:minHeight="48dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_box"
                    android:gravity="center"
                    tools:ignore="VisualLintTextFieldSize"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/opensansreg" />


                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    tools:ignore="VisualLintButtonSize"
                    android:background="@drawable/rounded_button"
                    android:textSize="15sp"
                    android:fontFamily="@font/opensansreg"
                    />

                <TextView
                    android:id="@+id/textViewCreateAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:minHeight="48dp"
                    android:onClick="openRegistrationActivity"
                    android:text="@string/create_account"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15sp"
                    android:fontFamily="@font/opensansreg" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>